--- a/.github/workflows/pruebas_Uni.yml
+++ b/.github/workflows/pruebas_Uni.yml
@@ -1,25 +1,28 @@
-name: Tests
+name: Run test
 
-on:
+on: 
   push:
     branches:
-      - main # Reemplaza con tu rama principal
+      - 'main'
+  pull_request:
+    branches:
+      - 'main'
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '21' # Puedes cambiar la versión de Node.js si es necesario
+    - name: Setup Node
+      uses: actions/setup-node@v2
+      with:
+        node-version: 21.0.0
 
-      - name: Install dependencies
-        run: npm install # O yarn install si usas yarn
+    - name: Install Dependencies
+      run: npm install
 
-      - name: Run tests
-        run: npm test # O yarn test si usas yarn
+    - name: Run tests
+      run: npm test
