--- a/.github/workflows/pruebas_Uni.yml
+++ b/.github/workflows/pruebas_Uni.yml
@@ -1,28 +1,34 @@
+  
 name: Run test
-
+  
 on: 
   push:
     branches:
-      - 'main'
+      'main'
+
   pull_request:
-    branches:
-      - 'main'
+      branches:
+        'main'
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
+    
+    steps: 
 
-    steps:
     - name: Checkout
       uses: actions/checkout@v2
 
+    
     - name: Setup Node
       uses: actions/setup-node@v2
       with:
-        node-version: 21.0.0
+       node-version: 21.1.0
 
+    
     - name: Install Dependencies
       run: npm install
 
+    
     - name: Run tests
       run: npm test
