--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "pruebasgerman",
+  "name": "unit-test",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
-  },
-
-  "scripts":{
-    "test": "jest"
+    "jest": "^29.6.4"
   }
 }
