--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "unit-test",
+  "name": "nombre-de-tu-proyecto",
   "version": "1.0.0",
-  "description": "",
+  "description": "Descripción de tu proyecto",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepush": "npm test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Tu Nombre",
+  "license": "MIT",
   "devDependencies": {
-    "jest": "^29.6.4"
+    "jest": "^27.0.0"
   }
 }
